--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Note: This is hosted on dhruvkapur91.github.io/learning-nc",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "convert" : "showdown makehtml -i README.md -o skeleton.html"
   },
   "repository": {
     "type": "git",
