--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "convert" : "showdown makehtml -i README.md -o skeleton.html"
+    "convert" : "./update.sh "
   },
   "repository": {
     "type": "git",
